# llm-tutorial

./: .ci.env  .env.template  README.md  docker-compose.yml
.github/workflows/: build.yml
backend/: .gitignore  pyproject.toml
backend/api/: settings.py
backend/api/routes/: car_sales.py  test.py
docs/de/: README.md
docs/de/topics/: llm-nlp.md  machine-learning.md
docs/en/: README.md
docs/en/topics/: machine-learning.md
frontend/: docker-compose.yml  entrypoint.sh  nginx.conf  package.json
frontend/public/: index.html  main.css  manifest.json
frontend/src/: App.jsx  i18n.js  index.jsx
frontend/src/api/: car_sales.js  config.js  index.js  test.js
frontend/src/components/car-sales/: CarSales.jsx
frontend/src/components/navigation/: Navigation.jsx  SubNavigation1.jsx  navigation.css
frontend/src/components/note/: Note.jsx
frontend/src/components/sidebar/: Sidebar.jsx
frontend/src/components/test/: Test.jsx  test.css
frontend/src/components/views/: Home.jsx
frontend/src/locales/de/: translation.json
frontend/src/locales/en/: translation.json
linear-regression/: .env  .env.template  README.md  docker-compose.yml
linear-regression/backend/: .env.template  Dockerfile  docker-compose.yml  main.py
linear-regression/backend/api/routes/: car_sales.py
linear-regression/frontend/: .env.template  Dockerfile  package.json
linear-regression/frontend/public/: index.html
linear-regression/frontend/src/: App.jsx
llm-summarizer/: Dockerfile  README.md  pyproject.toml
llm-summarizer/summarizer/: main.py
(+40 files in other folders)
