[project]
name = "llm-summarizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Michiels",email = "it@patrickmichiels.de"}
]
requires-python = "^3.10"
dependencies = [
    "transformers (>=4.51.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "summarizer" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
